--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
